syntax = "proto3";
package candlestick;

option go_package = "github.com/ramasbeinaty/trading-chart-service/proto/candlestick/contracts";

import "google/protobuf/timestamp.proto";

message Candlestick {
    string symbol = 1;
    double open_price = 2;
    double high_price = 3;
    double low_price = 4;
    double close_price = 5;
    google.protobuf.Timestamp trade_timestamp = 6;
}

message StreamRequest {
    string symbol = 1;
    int64 subscriber_id = 2;
}

message GenericResponse {
    string message = 1;
}

